# skeleton-record

./: .gitignore  CMakeLists.txt  README.md  SkelRecorder.cpp  SkelRecorder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/Modules/: FindOpenNI2.cmake
include/: OpenNIHelper.h  SkelRecorder.h  kinectbvh.h
src/: OpenNIHelper.cpp  SkelRecorder.cpp  main.cpp  mainwindow.glade
